--- a/Abschlussprojekt/templates/winterkleider.html
+++ b/Abschlussprojekt/templates/winterkleider.html
@@ -1,9 +1,14 @@
+<!-- header übernommen von jinja Datei -->
 {% include "header.jinja" %}
 <body>
-<form method="POST" action="{{ url_for('list') }}">
 
-  <h3>Winterkleider</h3>
+<!-- Was ist das? -->
+<form method="POST" action="{{ url_for('start') }}">
 
+<!-- Titel -->
+<h3>Winterkleider</h3>
+
+<!-- Start Checkboxen -->
 <div class="form-check">
   <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked">
   <label class="form-check-label" for="flexCheckChecked">
@@ -39,8 +44,11 @@
   </label>
 </div>
 
+
+<!-- Titel -->
 <h3>Reisedokumente</h3>
 
+<!-- Start Checkboxen -->
 <div class="form-check">
   <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked">
   <label class="form-check-label" for="flexCheckChecked">
@@ -76,8 +84,10 @@
   </label>
 </div>
 
-  <h3>Hygiene</h3>
+<!-- Titel -->
+<h3>Hygiene</h3>
 
+<!-- Start Checkboxen -->
 <div class="form-check">
   <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked">
   <label class="form-check-label" for="flexCheckChecked">
@@ -164,8 +174,11 @@
     Schmuck
   </label>
 </div>
-    <h3>Finanzen</h3>
 
+<!-- Titel -->
+<h3>Finanzen</h3>
+
+<!-- Start Checkboxen -->
 <div class="form-check">
   <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
   <label class="form-check-label" for="flexCheckDefault">
@@ -190,8 +203,10 @@
   </label>
 </div>
 
-  <h3>Handy</h3>
+<!-- Titel -->
+<h3>Handy</h3>
 
+<!-- Start Checkboxen -->
 <div class="form-check">
   <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
   <label class="form-check-label" for="flexCheckDefault">
@@ -238,15 +253,17 @@
     Kopfhörer
   </label>
 </div>
-</div>
 <div class="form-check">
   <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked">
   <label class="form-check-label" for="flexCheckChecked">
     Schutzhülle
   </label>
 </div>
-  <h3>Unterhaltung</h3>
 
+<!-- Titel -->
+<h3>Unterhaltung</h3>
+
+<!-- Start Checkboxen -->
 <div class="form-check">
   <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
   <label class="form-check-label" for="flexCheckDefault">
@@ -301,8 +318,8 @@
   </label>
 </div>
 
-    <input type="submit">
-</form>
+<!-- Button um die Packliste zu speichern -->
+  <button type="submit" class="btn btn-success">Speichern</button></form>
 
 </body>
 </html>
