--- a/Abschlussprojekt/static/bootstrap/style/stylesheet.css
+++ b/Abschlussprojekt/static/bootstrap/style/stylesheet.css
@@ -1,6 +1,6 @@
 h1 {
-    border: 2px #eee solid;
-    color: brown;
+    border: 3px #0a0a0a solid;
+    color: black;
     text-align: center;
-    padding: 10px;
+    padding: 20px;
 }
