--- a/Abschlussprojekt/templates/header.jinja
+++ b/Abschlussprojekt/templates/header.jinja
@@ -15,8 +15,12 @@
 
       <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
         <li><a href="{{ url_for('start') }}" class="nav-link px-2 link-secondary">Startseite</a></li>
-        <li><a href="{{ url_for('sommer') }}" class="nav-link px-2 link-dark">Sommerliste</a></li>
-        <li><a href="{{ url_for('index') }}" class="nav-link px-2 link-dark">Winterliste</a></li>
+        <li><a href="{{ url_for('sommer') }}" class="nav-link px-2 link-dark">Sommerkleider</a></li>
+        <li><a href="{{ url_for('winter') }}" class="nav-link px-2 link-dark">Winterkleider</a></li>
+        <li><a href="{{ url_for('ski') }}" class="nav-link px-2 link-dark">Skikleider</a></li>
+        <li><a href="{{ url_for('strand') }}" class="nav-link px-2 link-dark">Strandkleider</a></li>
+
+
       </ul>
 
     </header>
