--- a/Abschlussprojekt/templates/index.html
+++ b/Abschlussprojekt/templates/index.html
@@ -1,23 +1,23 @@
+<!-- header übernommen von jinja Datei -->
 {% include 'header.jinja' %}
 
-{% block content %}
-
-# block content ist ein Block, der durch Inhalte ersetzt wird, je nach de untergeordneten Vorlage, die ihn überschreiben wird.
-
-
+<!-- Bootstrap von stylesheet übernommen -->
 <div class="text-center">
+    <link rel="stylesheet" href="{{ url_for('static', filename= 'bootstrap/style/stylesheet.css') }}">
     <h1>{% block title %} Erstellen sie ihre personalisierte Packliste{% endblock %}</h1>
 </div>
+
+<!-- erstes Dropdownmenü -->
 <div class="dropdown">
     <label for="quality">Was ist die Art Ferien die sie machen möchten?</label>
     <select id="quality" name="quality">
-      <option value="Sommerferien">sommerferien</option>
-      <option value="Winterferien">winterferien</option>
-      <option value="Skiferien">skiferien</option>
-      <option value="Strandferien">strandferien</option>
-
-
+      <option value="Sommerferien">Sommerferien</option>
+      <option value="Winterferien">Winterferien</option>
+      <option value="Skiferien">Skiferien</option>
+      <option value="Strandferien">Strandferien</option>
     </select>
+
+<!-- zweites Dropdownmenü -->
 </div>
 <div class="dropdown">
     <label for="quality">Wie viele Tage gehst du in den Urlaub?</label>
@@ -26,11 +26,29 @@
       <option value="2">2</option>
       <option value="3">3</option>
       <option value="4">4</option>
+      <option value="1">5</option>
+      <option value="2">6</option>
+      <option value="3">7</option>
+      <option value="4">8</option>
+      <option value="1">9</option>
+      <option value="2">10</option>
+      <option value="3">11</option>
+      <option value="4">12</option>
+      <option value="3">13</option>
+      <option value="4">14</option>
     </select>
+
+<!-- Angabe des Erstelldatums der Packliste -->
 </div>
+<form method="POST">
+  <div class="mb-3">
+    <label for="deadlline" class="form-label"><h5>Erstelldatum</h5></label>
+    <input type="date" class="form-control" id="deadlline" name="deadline">
+  </div>
 
-<input type="submit">
+<!-- Button um die Einstellungen zu speichern -->
+  <button type="submit" class="btn btn-primary">Speichern</button>
+</form>
 
-# endblock ist ein Block, der durch Inhalte ersetzt wird, je nach de untergeordneten Vorlage, die ihn überschreiben wird.
 
-{% endblock %}
+
