--- a/Abschlussprojekt/templates/skiferien.html
+++ b/Abschlussprojekt/templates/skiferien.html
@@ -1,10 +1,15 @@
+<!-- header übernommen von jinja Datei -->
 {% include "header.jinja" %}
 <body>
-<form method="POST" action="{{ url_for('list') }}">
 
-  <h3>Skibekleidung</h3>
+<!-- Was ist das? -->
+<form method="POST" action="{{ url_for('start') }}">
 
-    <div class="form-check">
+<!-- Titel -->
+<h3>Skibekleidung</h3>
+
+<!-- Start Checkboxen -->
+<div class="form-check">
   <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
   <label class="form-check-label" for="flexCheckDefault">
     Skijacke
@@ -15,7 +20,7 @@
   <label class="form-check-label" for="flexCheckChecked">
     Skihose
   </label>
-        <div class="form-check">
+<div class="form-check">
   <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
   <label class="form-check-label" for="flexCheckDefault">
     Thermounterwäsche
@@ -26,7 +31,7 @@
   <label class="form-check-label" for="flexCheckChecked">
     Skisocken
   </label>
-        <div class="form-check">
+<div class="form-check">
   <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
   <label class="form-check-label" for="flexCheckDefault">
     Handshcuhe
@@ -37,7 +42,7 @@
   <label class="form-check-label" for="flexCheckChecked">
     Mützen und Ohrwärmer
   </label>
-        <div class="form-check">
+<div class="form-check">
   <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
   <label class="form-check-label" for="flexCheckDefault">
     Helm
@@ -48,7 +53,7 @@
   <label class="form-check-label" for="flexCheckChecked">
     Skibrille
   </label>
-        <div class="form-check">
+<div class="form-check">
   <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
   <label class="form-check-label" for="flexCheckDefault">
     Warmer Pullover
@@ -59,7 +64,7 @@
   <label class="form-check-label" for="flexCheckChecked">
     Winterschuhe
   </label>
-        <div class="form-check">
+<div class="form-check">
   <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
   <label class="form-check-label" for="flexCheckDefault">
     Skimaske
@@ -70,16 +75,17 @@
   <label class="form-check-label" for="flexCheckChecked">
     Schal
   </label>
-        <div class="form-check">
+<div class="form-check">
   <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
   <label class="form-check-label" for="flexCheckDefault">
     Sonnenbrille
   </label>
 </div>
 
+<!-- Titel -->
+<h3>Reisedokumente</h3>
 
-  <h3>Reisedokumente</h3>
-
+<!-- Start Checkboxen -->
 <div class="form-check">
   <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked">
   <label class="form-check-label" for="flexCheckChecked">
@@ -115,8 +121,10 @@
   </label>
 </div>
 
-  <h3>Hygiene</h3>
+<!-- Titel -->
+<h3>Hygiene</h3>
 
+<!-- Start Checkboxen -->
 <div class="form-check">
   <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked">
   <label class="form-check-label" for="flexCheckChecked">
@@ -203,8 +211,11 @@
     Schmuck
   </label>
 </div>
-    <h3>Finanzen</h3>
 
+<!-- Titel -->
+<h3>Finanzen</h3>
+
+<!-- Start Checkboxen -->
 <div class="form-check">
   <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
   <label class="form-check-label" for="flexCheckDefault">
@@ -229,8 +240,10 @@
   </label>
 </div>
 
-  <h3>Handy</h3>
+<!-- Titel -->
+<h3>Handy</h3>
 
+<!-- Start Checkboxen -->
 <div class="form-check">
   <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
   <label class="form-check-label" for="flexCheckDefault">
@@ -284,8 +297,11 @@
     Schutzhülle
   </label>
 </div>
-  <h3>Unterhaltung</h3>
 
+<!-- Titel -->
+<h3>Unterhaltung</h3>
+
+<!-- Start Checkboxen -->
 <div class="form-check">
   <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
   <label class="form-check-label" for="flexCheckDefault">
@@ -340,7 +356,7 @@
   </label>
 </div>
 
-    <input type="submit">
-</form>
+<!-- Button um die Packliste zu speichern -->
+  <button type="submit" class="btn btn-success">Speichern</button></form>
 </body>
 </html>
