--- a/Abschlussprojekt/templates/sommerkleider.html
+++ b/Abschlussprojekt/templates/sommerkleider.html
@@ -1,11 +1,15 @@
+<!-- header übernommen von jinja Datei -->
 {% include "header.jinja" %}
 <body>
 
-<form method="POST" action="{{ url_for('list') }}">
+<!-- Was ist das? -->
+<form method="POST" action="{{ url_for('start') }}">
 
-  <h3>Sommerbekleidung</h3>
+<!-- Titel -->
+<h3>Sommerbekleidung</h3>
 
-    <div class="form-check">
+<!-- Start Checkboxen -->
+<div class="form-check">
   <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
   <label class="form-check-label" for="flexCheckDefault">
     kurze Hosen
@@ -67,8 +71,10 @@
   </label>
 </div>
 
-  <h3>Reisedokumente</h3>
+<!-- Titel -->
+<h3>Reisedokumente</h3>
 
+<!-- Start Checkboxen -->
 <div class="form-check">
   <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked">
   <label class="form-check-label" for="flexCheckChecked">
@@ -104,8 +110,10 @@
   </label>
 </div>
 
-  <h3>Hygiene</h3>
+<!-- Titel -->
+<h3>Hygiene</h3>
 
+<!-- Start Checkboxen -->
 <div class="form-check">
   <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked">
   <label class="form-check-label" for="flexCheckChecked">
@@ -192,8 +200,11 @@
     Schmuck
   </label>
 </div>
-    <h3>Finanzen</h3>
 
+<!-- Titel -->
+<h3>Finanzen</h3>
+
+<!-- Start Checkboxen -->
 <div class="form-check">
   <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
   <label class="form-check-label" for="flexCheckDefault">
@@ -218,8 +229,10 @@
   </label>
 </div>
 
-  <h3>Handy</h3>
+<!-- Titel -->
+<h3>Handy</h3>
 
+<!-- Start Checkboxen -->
 <div class="form-check">
   <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
   <label class="form-check-label" for="flexCheckDefault">
@@ -273,8 +286,11 @@
     Schutzhülle
   </label>
 </div>
-  <h3>Unterhaltung</h3>
 
+<!-- Titel -->
+<h3>Unterhaltung</h3>
+
+<!-- Start Checkboxen -->
 <div class="form-check">
   <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
   <label class="form-check-label" for="flexCheckDefault">
@@ -329,7 +345,8 @@
   </label>
 </div>
 
-<input type="submit">
+<!-- Button um die Packliste zu speichern -->
+  <button type="submit" class="btn btn-success">Speichern</button>
 
 </form>
 </body>
