--- a/Abschlussprojekt/templates/header.jinja
+++ b/Abschlussprojekt/templates/header.jinja
@@ -14,7 +14,7 @@
       </a>
 
       <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-        <li><a href="{{ url_for('start') }}" class="nav-link px-2 link-secondary">Startseite</a></li>
+        <li><a href="{{ url_for('ad_new_packliste') }}" class="nav-link px-2 link-secondary">Startseite</a></li>
         <li><a href="{{ url_for('sommer') }}" class="nav-link px-2 link-dark">Sommerkleider</a></li>
         <li><a href="{{ url_for('winter') }}" class="nav-link px-2 link-dark">Winterkleider</a></li>
         <li><a href="{{ url_for('ski') }}" class="nav-link px-2 link-dark">Skikleider</a></li>
