--- a/Abschlussprojekt/templates/sommerkleider.html
+++ b/Abschlussprojekt/templates/sommerkleider.html
@@ -349,5 +349,6 @@
   <button type="submit" class="btn btn-success">Speichern</button>
 
 </form>
-</body>
-</html>
+
+{% include "footer.jinja" %}
+
