--- a/Abschlussprojekt/templates/winterkleider.html
+++ b/Abschlussprojekt/templates/winterkleider.html
@@ -321,5 +321,5 @@
 <!-- Button um die Packliste zu speichern -->
   <button type="submit" class="btn btn-success">Speichern</button></form>
 
-</body>
-</html>
+{% include "footer.jinja" %}
+
