--- a/Abschlussprojekt/templates/skiferien.html
+++ b/Abschlussprojekt/templates/skiferien.html
@@ -358,5 +358,6 @@
 
 <!-- Button um die Packliste zu speichern -->
   <button type="submit" class="btn btn-success">Speichern</button></form>
-</body>
-</html>
+
+{% include "footer.jinja" %}
+
