--- a/Abschlussprojekt/templates/strandferien.html
+++ b/Abschlussprojekt/templates/strandferien.html
@@ -359,5 +359,6 @@
 
 <!-- Button um die Packliste zu speichern -->
   <button type="submit" class="btn btn-success">Speichern</button></form>
-</body>
-</html>
+
+{% include "footer.jinja" %}
+
