--- a/Abschlussprojekt/templates/packliste.html
+++ b/Abschlussprojekt/templates/packliste.html
@@ -2,10 +2,14 @@
 {% for eintrag in liste %}
   <div class="card" style="width: 18rem;">
     <div class="card-body">
-      <h5 class="card-title">{{ eintrag[1] }}</h5>
-      <p class="card-text">{{ eintrag[0] }}</p>
+      <h5 class="card-title">{{ eintrag[0] }}</h5>
+      <p class="card-text">{{ eintrag[1] }}</p>
+      <p class="card-text">{{ eintrag[2] }}</p>
+      <a href="#" class="btn btn-primary">abrufen</a>
+
     </div>
   </div>
 
 {% endfor %}
 {% include "footer.jinja" %}
+
