--- a/Abschlussprojekt/templates/index.html
+++ b/Abschlussprojekt/templates/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename= 'bootstrap/style/stylesheet.css') }}">
     <h1>{% block title %} Erstellen sie ihre personalisierte Packliste{% endblock %}</h1>
 </div>
-<form action="action_to_perform_after_submission" method="POST">
+<form method="POST">
 
 <!-- erstes Dropdownmenü -->
     <br>
