--- a/Abschlussprojekt/templates/packliste.html
+++ b/Abschlussprojekt/templates/packliste.html
@@ -3,8 +3,8 @@
   <div class="card" style="width: 18rem;">
     <div class="card-body">
       <h5 class="card-title">{{ eintrag[0] }}</h5>
-      <p class="card-text">{{ eintrag[1] }}</p>
-      <p class="card-text">{{ eintrag[2] }}</p>
+      <p class="card-text">Anzahl Tage: {{ eintrag[1] }}</p>
+      <p class="card-text">Daum: {{ eintrag[2] }}</p>
       <a href="#" class="btn btn-primary">abrufen</a>
 
     </div>
