--- a/Abschlussprojekt/templates/EndeDerPacklistenauswahl.html
+++ b/Abschlussprojekt/templates/EndeDerPacklistenauswahl.html
@@ -4,8 +4,7 @@
 <!-- Bootstrap von stylesheet übernommen -->
 <div class="text-center" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
     <link rel="stylesheet" href="{{ url_for('static', filename= 'bootstrap/style/stylesheet.css') }}">
-    <h2>{% block title %} Deine Packliste wurde gespeichert. <br> Du kannst Sie unter "Datenbase" nun einsehen{% endblock %}</h2>
+    <h2>{% block title %} Deine Packliste wurde gespeichert. <br> Du kannst Sie unter "Packlisten" nun einsehen{% endblock %}</h2>
 </div>
-
 
 {% include "footer.jinja" %}
