--- a/Abschlussprojekt/templates/header.jinja
+++ b/Abschlussprojekt/templates/header.jinja
@@ -19,10 +19,8 @@
         <li><a href="{{ url_for('winter') }}" class="nav-link px-2 link-dark">Winterkleider</a></li>
         <li><a href="{{ url_for('ski') }}" class="nav-link px-2 link-dark">Skikleider</a></li>
         <li><a href="{{ url_for('strand') }}" class="nav-link px-2 link-dark">Strandkleider</a></li>
-        <li><a href="{{ url_for('start') }}" class="nav-link px-2 link-dark">Database</a></li>
-
-
-
+        <li><a href="{{ url_for('start') }}" class="nav-link px-2 link-dark">Packlisten</a></li>
+        <li><a href="{{ url_for('start') }}" class="nav-link px-2 link-dark">Hinzufügen</a></li>
       </ul>
 
     </header>
