--- a/Abschlussprojekt/templates/index.html
+++ b/Abschlussprojekt/templates/index.html
@@ -8,7 +8,12 @@
 </div>
 <form method="POST">
 
+<!-- Benennung der Packliste -->
+    <br>
+    <label for="ort"> Wie möchten sie Ihre Packliste bennenen?</label>
+    <input type="text" id="ort" name="ort">
 <!-- erstes Dropdownmenü -->
+    <br>
     <br>
 <div class="dropdown">
     <label for="typ">Was ist die Art Ferien die sie machen möchten?</label>
