--- a/Abschlussprojekt/templates/pack_auswahl.html
+++ b/Abschlussprojekt/templates/pack_auswahl.html
@@ -1,7 +1,8 @@
 <!-- header übernommen von jinja Datei -->
 {% include "header.jinja" %}
 <!-- Was ist das? -->
-<form method="POST" action="{{ url_for('start') }}">
+
+<form method="POST">
     {% for kategorie in kategorien %}
       <!-- Titel -->
 
@@ -9,7 +10,7 @@
       <!-- Start Checkboxen -->
       {% for ding in sachen[kategorie] %}
         <div class="form-check">
-            <input class="form-check-input" type="checkbox" value="{{ ding }}" name="name" id="{{ ding }}">
+            <input class="form-check-input" type="checkbox" value="{{ ding }}" name="{{ding}}" id="{{ ding }}">
             <label class="form-check-label" for="{{ ding }}">
                 {{ ding }}
             </label>
@@ -18,6 +19,7 @@
     <br>
     {% endfor %} <!-- Ende der Kategorien Schleife -->
     <!-- Button um die Packliste zu speichern -->
+    <input type="hidden" value="{{letzter_eintrag}}" name="letzter_eintrag">
     <button type="submit" class="btn btn-success">Speichern</button>
 </form>
 
