--- a/Abschlussprojekt/templates/Sachen_Hinzufügen.html
+++ b/Abschlussprojekt/templates/Sachen_Hinzufügen.html
@@ -8,4 +8,9 @@
 <form method="POST" action="{{ url_for('hinzufügen') }}">
 
 
+
+</form>
+
+
+<!-- footer von jinja Datei übernommen -->
 {% include "footer.jinja" %}
