--- a/Abschlussprojekt/static/bootstrap/style/stylesheet.css
+++ b/Abschlussprojekt/static/bootstrap/style/stylesheet.css
@@ -8,3 +8,16 @@ h2 {
     padding: 20px;
 
 }
+
+#new {
+  display: block;
+  margin: 0 auto;
+  text-align: center;
+}
+
+#button {
+  display: block;
+  margin: 0 auto;
+  text-align: center;
+}
+
