--- a/Abschlussprojekt/templates/header.jinja
+++ b/Abschlussprojekt/templates/header.jinja
@@ -20,7 +20,7 @@
         <li><a href="{{ url_for('ski') }}" class="nav-link px-2 link-dark">Skikleider</a></li>
         <li><a href="{{ url_for('strand') }}" class="nav-link px-2 link-dark">Strandkleider</a></li>
         <li><a href="{{ url_for('start') }}" class="nav-link px-2 link-dark">Packlisten</a></li>
-        <li><a href="{{ url_for('start') }}" class="nav-link px-2 link-dark">Hinzufügen</a></li>
+        <li><a href="{{ url_for('add_sachen') }}" class="nav-link px-2 link-dark">Hinzufügen</a></li>
       </ul>
 
     </header>
