--- a/Abschlussprojekt/templates/index.html
+++ b/Abschlussprojekt/templates/index.html
@@ -9,8 +9,8 @@
 <!-- Benennung der Packliste -->
     <br>
     <label for="ort">Wie möchten sie Ihre Packliste bennenen?</label>
-    <input type="text" id="ort" name="ort">
-<!-- erstes Dropdownmenü -->
+    <input type="text" id="ort" name="ort" required>
+<!-- Dropdownmenü -->
     <br>
     <br>
 <div class="dropdown">
@@ -33,6 +33,3 @@
 </form>
 <!-- footer von jinja Datei übernommen -->
 {% include "footer.jinja" %}
-
-
-
