--- a/Abschlussprojekt/templates/abrufen.html
+++ b/Abschlussprojekt/templates/abrufen.html
@@ -1,10 +1,16 @@
 <!-- header übernommen von jinja Datei -->
 {% include "header.jinja" %}
-
 <!-- Bootstrap von stylesheet übernommen -->
 <div class="text-center" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
     <link rel="stylesheet" href="{{ url_for('static', filename= 'bootstrap/style/stylesheet.css') }}">
-    <h2>{% block title %} Deine Packliste wurde gespeichert. <br> Du kannst Sie unter "Packlisten" nun einsehen{% endblock %}</h2>
+    <h2>{% block title %} Deine Packlsiste {% endblock %}</h2>
+</div>
+<div class="d-flex justify-content-center">
+<div class="card" style="width: 15rem;">
+    <div class="card-body">
+        <h5 class="card-title">{{ eintrag }}</h5>
+    </div>
 </div>
 
+<!-- footer von jinja Datei übernommen -->
 {% include "footer.jinja" %}
